example.env update

--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,3 @@
 URI_DB={Add your connection string MongoDB Atlas}
+PORT = {port you like, for example 3000}
+JWT_SECRET_KEY = {secret word - rxample rainbow}
