changes in hw - almost done

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,5 @@
 URI_DB={Add your connection string MongoDB Atlas}
 PORT = {port you like, for example 3000}
 JWT_SECRET_KEY = {secret word - rxample rainbow}
+UPLOAD_DIR = {for example tmp}
+FOLDER_FOR_AVATARS = {for example public\avatars}
