--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,6 @@
-URI_DB={Add your connection string MongoDB Atlas}
-PORT = {port you like, for example 3000}
-JWT_SECRET_KEY = {secret word - rxample rainbow}
-UPLOAD_DIR = {for example tmp}
-FOLDER_FOR_AVATARS = {for example public\avatars}
+URI_DB =
+PORT =
+JWT_SECRET_KEY =
+UPLOAD_DIR =
+FOLDER_FOR_AVATARS =
+SENDGRID_API_KEY =
